Project cleanup (#30)
* Added Auth Header to Swagger
Removed Unnecessary Controllers

* Added Highscore Tracking for Players
Fixed SpGameController Unit Test

* Fixed Most Lint Errors